--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PTT Project</title>
+        <title>PTT Project Co.Ltd</title>
         <!-- fav icon  -->
         <link rel="icon" type="image" sizes="32*32" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSypvEq1tWAiHg8TRMq4oV4tub7Xu4tb8cEDQ&usqp=CAU">
         <!-- bootstrap css1 js1  -->
@@ -61,7 +61,7 @@
                 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
                     <a href="#" class="navbar-brand mx-3" >
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSypvEq1tWAiHg8TRMq4oV4tub7Xu4tb8cEDQ&usqp=CAU" width="50" alt="sitelogo">
-                        <span class="ms-3">PTT Project</span>
+                        <span class="ms-3">PTT Project Co.Ltd</span>
                     </a>
 
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
